--- a/student_09/home.html
+++ b/student_09/home.html
@@ -9,7 +9,7 @@
   <h1> Homepage </h1>
 </header>
 <h1>
-You made it !! this is the hompage. here you will learn all about me!!  
+You made it !! this is the hompage. here you will learn all about me!! If you have a question you can go to the contact Us page put it as the message and I will happily add it to this page   
 </h1>
 </p2>
 Question 1 : what is your favorite color?
@@ -60,7 +60,7 @@ body{
   </p5>
 <br>
 <br>
-<p6>We know you said ur from mars but where are you really from?</p6>
+<p6>Question 4: We know you said ur from mars but where are you really from?</p6>
 <br>
 <br>
 <p7>Answer: 1st of all I am very offended. 2nd if you said that I already told you then why are you asking. 3rd of all I really am from Mars. Too bad the third rule of aliens is to not harm humans😠😡😒.</p7>
