--- a/student_31/contact.html
+++ b/student_31/contact.html
@@ -43,7 +43,7 @@ What is your question? <br>
   <option value="No, i don't want that">
     Pizza
     </option>
-  <option value="burrito">
+  <option value="747-272-7720">
     Burrito
   </option>
   </select><br><br>
