--- a/student_24/index.html
+++ b/student_24/index.html
@@ -5,7 +5,7 @@
 <body>
 <header>
   <a href = "/">
-    <img src "picture.png">
+    <img src "https://i.ytimg.com/vi/c-K0t1rBEE4/maxresdefault.jpg">
   </a>
   <h1> The Coding School </h1>
 </header>
@@ -23,7 +23,7 @@ Created by Me!
   <div class="row">
   <div class="column left" style="background-color:#aaa;">
     <h2>Column 1</h2>
-    <p>Some text..</p>
+    <p>Hey guys! Welcome to my website. My name is Andre Avakian
   </div>
   <div class="column right" style="background-color:#bbb;">
     <h2>Column 2</h2>
