--- a/student_13/gallery.html
+++ b/student_13/gallery.html
@@ -11,7 +11,7 @@
     <h1> Get Free V-Bucks Here </h1>
     <h1> Someone I like to listen to is Marshmello <h1>
     <h1> I just started playing Apex Legends <h1>
-    <h1> I also suport the LA Rams <h1>
+    <h1> I also support the LA Rams <h1>
   <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrcCTP_hEWhSx4LmZHVfEu1-i6HiNrMZ6086U7wBAtSh3gdLmBSg">
   <img src = "https://cdn.pastemagazine.com/www/articles/2019/02/19/apex%20legends%20dante%20main%202.jpg ">
 </header>
