--- a/student_24/index.html
+++ b/student_24/index.html
@@ -22,12 +22,8 @@ Created by Me!
 </footer>
   <div class="row">
   <div class="column left" style="background-color:#aaa;">
-    <h2>Column 1</h2>
+    <h2>Welcome to my Wesite!</h2>
     <p>Hey guys! Welcome to my website. My name is Andre Avakian. Hope you enjoy my website. SUB TO PEWDS!!!
-  </div>
-  <div class="column right" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>You know what just go to other stuff.</p>
   </div>
 </div>
 </body>
