--- a/student_09/contact.html
+++ b/student_09/contact.html
@@ -69,5 +69,12 @@ What is your question/message? <br>
   <br><br>
   <input type = "submit" value="Submit">
   </form>
+  <style type="text/css">
+body{
+	border-style: dotted;
+	border-width: medium;
+	border-color: blue;
+	background-color: pink;}
+</style>
 </body>
 </html>
