--- a/student_24/index.html
+++ b/student_24/index.html
@@ -23,7 +23,7 @@ Created by Me!
   <div class="row">
   <div class="column left" style="background-color:#aaa;">
     <h2>Welcome to my Wesite!</h2>
-    <p>Hey guys! Welcome to my website. My name is Andre Avakian. Hope you enjoy my website. SUB TO PEWDS!!!
+    <p>Hey guys! Welcome to my website. My name is Andre Avakian. Hope you enjoy my website!
   </div>
 </div>
 </body>
