--- a/student_09/boutme.html
+++ b/student_09/boutme.html
@@ -10,8 +10,16 @@
 <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYHqP7QQOTIc7m2BzOqwwAJI6ZiJpXxJFyhMRgJDlPYMZ2z5wGmw">
 </div>
   <div id="info">
-    <p>Hello, my name is Aliengure.On the left you can see a picture of me. I am an alien sent to earth to study earthlings.My favorite color is blue and I like sushi. I like astronomy and hope to be an astronaut when I grow up.</p>
+    <p>Hello, my name is somthin.On the left you can see a picture of me. I am an alien sent to earth to study earthlings.My favorite color is blue and I like an earth food called Ice cream. I like astronomy and hope to be an astronaut when I grow up.</p>
 </div>
+ <style type="text/css">
+body{
+	border-style: dashed;
+	border-width: thick;
+	border-color: red;
+	background-color: yellow;
+	 }
+</style>
     </body>
   </html>
 
