--- a/student_19/index.html
+++ b/student_19/index.html
@@ -10,8 +10,7 @@
 
   <a href = "/">
 
-    <img src = "https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwj5uN_wz4LgAhWJjFQKHd2MAa8QjRx6BAgBEAU&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FCommon_goldfish&psig=AOvVaw1UNwbBtlZzF0-uhVmk8az7&ust=1548288928501666" />
-
+    <img src = "picture.png"
   </a>
 
   <h1> The Coding School </h1>
@@ -74,6 +73,8 @@ Created by Me!
 <h1> Welcome to my Index file<h1>
 <p>Welcome to my Index file, one of my websites in this website I will put a picture of me. Anyways my this is my first year of coding,
 I have tried so hard this year to do good and get good grades. I hope you like my website.<p>
-</body>
+<img src = "me.png"
+	</body>
+	
 
 </html>
