--- a/student_24/index.html
+++ b/student_24/index.html
@@ -24,7 +24,7 @@ Created by Me!
   <div class="column left" style="background-color:#aaa;">
     <h2>Welcome to my Wesite!</h2>
     <p>Hey guys! Welcome to my website. My name is Andre Avakian. Hope you enjoy my website!
-    <background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkQg4gHqHhzlbohLhdd6DBFjhKNFdgkPpMXGQXOQMjZiSKdUsyqw">  
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6UjfZ4kzkeJKrZilF4Ws4hNgQjBboopL7I4nMMcXvoXW-I77T9A"> 
     </div>
 </div>
 </body>
