--- a/student_19/index.html
+++ b/student_19/index.html
@@ -8,10 +8,11 @@
 
 <header>
 
-  <a href = "/">
+ 
 
     <img src = "me.PNG"/>
-  </a>
+	  <a href = "me.PNG">PIC </a>
+  
 
   <h1> The Coding School </h1>
 
