--- a/student_13/about.html
+++ b/student_13/about.html
@@ -46,6 +46,7 @@
 <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_8thera8-VHBTEvitk9KuxyFvUEJg3HcwUP1d_3lnBD5uvLPe "/>
   </a>
 <h1> Get Free V-Bucks Here </h1>
+  <img src = "https://cdn.mos.cms.futurecdn.net/CMRgweHCrD63j78gcwUJN9-768-80.jpg"/>
 </header>
 <nav>
   <ul>
