--- a/student_09/boutme.html
+++ b/student_09/boutme.html
@@ -14,7 +14,7 @@
 <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYHqP7QQOTIc7m2BzOqwwAJI6ZiJpXxJFyhMRgJDlPYMZ2z5wGmw">
 </div>
   <div id="info">
-    <H1>Hello, my name is Me.On the left you can see a picture of me. I am an alien sent to earth to study earthlings.My favorite color is blue and I like an earth food called Ice cream. I like astronomy and hope to be an astronaut when I grow up. I really hate scientist because hey put our species in cages. They also took away my car and called it an UFO. Crazy right? </H1> 
+    <H1>Hello, my name is Me.On the left you can see a picture of me. I am an alien sent to earth to study earthlings.My favorite color is blue and I like an earth food called Ice cream. I like astronomy and hope to be an astronaut when I grow up. I really hate scientist because hey put our species in cages. They also took away my car and called it an UFO. Crazy right? My favorite subject is Math because it is the only subject i am actually good at. </H1> 
 </div>
     </body>
   </html>
