--- a/student_24/index.html
+++ b/student_24/index.html
@@ -7,6 +7,7 @@
   <a href = "/">
     <img src "https://i.ytimg.com/vi/c-K0t1rBEE4/maxresdefault.jpg">
   </a>
+     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6UjfZ4kzkeJKrZilF4Ws4hNgQjBboopL7I4nMMcXvoXW-I77T9A"> 
   <h1> The Coding School </h1>
 </header>
 <nav>
