--- a/student_24/index.html
+++ b/student_24/index.html
@@ -7,7 +7,6 @@
   <a href = "/">
     <img src "https://i.ytimg.com/vi/c-K0t1rBEE4/maxresdefault.jpg">
   </a>
-     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6UjfZ4kzkeJKrZilF4Ws4hNgQjBboopL7I4nMMcXvoXW-I77T9A"> 
   <h1> The Coding School </h1>
 </header>
 <nav>
@@ -25,7 +24,7 @@ Created by Me!
   <div class="column left" style="background-color:#aaa;">
     <h2>Welcome to my Wesite!</h2>
     <p>Hey guys! Welcome to my website. My name is Andre Avakian. Hope you enjoy my website!
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6UjfZ4kzkeJKrZilF4Ws4hNgQjBboopL7I4nMMcXvoXW-I77T9A"> 
+    <img src="https://s3.amazonaws.com/twin-galaxies-www/assets/article/2018/07/12/fortnite-no-skin_feature.jpg"> 
     </div>
 </div>
 </body>
