--- a/student_24/index.html
+++ b/student_24/index.html
@@ -5,7 +5,7 @@
 <body>
 <header>
   <a href = "/">
-    <img src "https://i.ytimg.com/vi/c-K0t1rBEE4/maxresdefault.jpg">
+    <img src "/">
   </a>
   <h1> The Coding School </h1>
 </header>
