--- a/student_24/about.html
+++ b/student_24/about.html
@@ -17,7 +17,7 @@
     <li><a href = "contact.html"> Contact Us </a></li>
   </ul>
 </nav>
-<img style="float:left; width:20%; height:20%;"src="https://images.pexels.com/photos/59523/pexels-photo-59523.jpeg?cs=srgb&dl=animal-cute-animals-dog-59523.jpg&fm=jpg">
+<img style="float:left; width:20%; height:20%;"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBzKo5WJqc0BMGybSLMKQr142zVrx9tNNEOHRTomIBfOoLdLR4">
 <p >
 My name is Andre Avakian. My favorite games are Black os 4 and Fortnite. My favortite foods are pizza and hamburgers. 
 My favorite hobbies are playing video games, robotics and coding. My favorte youtube channel is AliA. My favorite car is a lamborini.
